--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,74 @@
 body {
   margin: 0;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 100;
 }
 
 .heading {
-  color: whitesmoke;
-  font-family: 'Darker Grotesque', sans-serif;
+  color: #ccc;
   text-align: center;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 25px;
+  border: 4px solid #333;
+  width: 100%;
+  border-radius: 20px;
+  background: rgba(27, 27, 27, 0.6);
+  margin: 0 0 30px 0;
 }
 
 h1 {
-  font-weight: 900;
-  font-size: 6rem;
-  margin: -2rem 0 -.5rem 0;
+  /* font-weight: 900; */
+  font-size: 3rem;
+  font-weight: 100;
+  margin: 0;
+  /* margin: -2rem 0 -.5rem 0; */
 }
 
 h2 {
-  font-weight: 400;
+  /* font-weight: 400; */
   margin: 0;
-  font-size: 2rem;
+  font-weight: 100;
+  font-size: 1rem;
+}
+
+.display {
+  position: relative;
+}
+
+.display h3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  color: #ccc;
+  background: rgba(27, 27, 27, 0.75);
+  border: 4px solid transparent;
+  border-top-color: #333;
+  border-left-color: #333;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  text-align: center;
+  width: 40%;
+  text-transform: lowercase;
+  font-size: .8rem;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+
+@media only screen and (max-width: 426px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  h2 {
+    font-size: .75rem;
+  }
+
+  .display h3 {
+    font-size: .6rem;
+  }
 }
